--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,5 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-.nombre{
-    color: blue;
-    font-size: 20px;
-    border: 15px solid #000;
-    margin: 50px;
-    padding: 25px;
-}
-
-#titulo{
-    color: gray
-}
-
-.awards{
-    color: blueviolet
+.body{
+    font-family: 'Montserrat', 'Trebuchet MS', sans-serif
 }
