--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,3 +3,10 @@
 body{
     font-family: "Montserrat", sans-serif;
 }
+
+#Hero-Section {
+    background-image: url("../img/bg-hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: left;
+}
