change resume-section padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,8 @@ body{
     background-size: cover;
     background-position: left;
 }
+
+.resume-section {
+    padding-top: 5rem;
+    padding-bottom: 5rem
+}
