--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,9 @@ body{
     padding-top: 5rem;
     padding-bottom: 5rem
 }
+
+.rounded-circle {
+    width: 3rem;
+    height: 3rem;
+    margin-right: 1rem
+}
