fix social icons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body{
     padding-bottom: 5rem
 }
 
-.rounded-circle {
+.custom-circle {
     width: 3rem;
     height: 3rem;
     margin-right: 1rem
