--- a/assets/css/style-portfolio.css
+++ b/assets/css/style-portfolio.css
@@ -6,7 +6,7 @@ body{
 
 .portfolio-img {
 	height: 35rem;
-	object-fit: cover; /* Hace que la imagen se ajuste sin distorsionar */
+	object-fit: cover;
   }
 
 a{
@@ -14,5 +14,5 @@ a{
 }
 
 a:hover {
-	color: blue; /* Cambia el color del enlace cuando el cursor pasa por encima */
+	color: blue;
   }
